Initial commit of the Python Helpers package, including core modules for authentication, AWS utilities, and common functionalities. Added Makefile for project management, configuration files, and initial test structure. Updated .gitignore and added Python version specification.

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,18 @@ build/
 dist/
 wheels/
 *.egg-info
+.pytest_cache/
 
 # Virtual environments
 .venv
+
+.DS_Store
+.devcontainer/
+.claude/
+CLAUDE.md
+CLAUDE.local.md
+
+.coverage
+dist/
+htmlcov/
+coverage.xml
