--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "python-helpers"
-version = "0.1.1"
+version = "0.1.3"
 description = "Python helpers for the workspace"
 readme = "README.md"
 requires-python = ">=3.13"
@@ -12,6 +12,7 @@ dependencies = [
     "boto3>=1.39.14",
     "botocore>=1.39.14",
     "dotenv>=0.9.9",
+    "fastapi>=0.116.1",
     "httpx>=0.28.1",
     "moto>=5.1.8",
     "pytest>=8.4.1",
