Remove custom_cognito module and related functionalities from the project. Update imports and documentation to reflect the removal. Adjust Makefile and changelog accordingly. Ensure that the project structure is clean and consistent without the deprecated module.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,7 +41,7 @@ dev = [
 ]
 
 [tool.setuptools.packages.find]
-include = ["custom_auth", "custom_aws", "custom_cognito"]
+include = ["custom_auth", "custom_aws"]
 exclude = ["tests*"]
 
 [tool.pytest.ini_options]
